feat(dashboard): multi definition report variable names
relates to #OPT-5284